--- a/views/footer.pug
+++ b/views/footer.pug
@@ -1,5 +1,6 @@
 footer.footer
-  div.footer-links
+  div.footer-links ipso Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     //- a Link
     //- a Link
     //- a Link
