--- a/public/stylesheets/books.css
+++ b/public/stylesheets/books.css
@@ -27,9 +27,25 @@
 
 .book {
   display: inline-flex;
-  margin-left: 1%;
+  margin-left: 25%;
   height: 350px;
   justify-content: center;
+  align-items: center;
+  background-color: rgb(210, 180, 130);
+  padding: 15px;
+  border-radius: 25px;
+  margin-top: 50px;
+  box-shadow: 0 0 20px 5px rgba(0,0,0,0.1);
+  margin-bottom: 400px;
+}
+
+.form {
+  margin: 20px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -41,6 +57,7 @@
 }
 
 ul.list {
+  margin-bottom: 75px;
   margin-left: 50px;
 }
 
@@ -65,4 +82,19 @@ li.synopsis {
 
 li.published {
   font-weight: 700;
+}
+
+.errors {
+  font-size: 10px;
+  color: red;
+  text-align: center;
+  margin-top: 5px;
+  padding: 5px;
+}
+
+.success {
+  font-size: 10px;
+  color: green;
+  margin-top: 5px;
+  padding: 5px;
 }
