--- a/views/book.pug
+++ b/views/book.pug
@@ -7,19 +7,23 @@ append head
 
 block content
   div.book
-    img(src=`${book.coverArt}` width="160px" height="200px")
-    ul.list(id=`${book.id}`)
+    div.container
+      img(src=`${book.coverArt}` width="160px" height="200px")
+      div.form
+        form(action=`/books/${book.id}` method="post")
+          select.cryptSelector(name="cryptSelector")
+            option Add to Crypt...
+            each crypt in crypts
+              option(value=crypt.id class="crypt")= crypt.name
+      div.button
+        button(type="submit" id="crypt-submit") Submit
+      div.errors
+      div.success
+    ul.list(id=`${book.id}` style="list-style-type:none;")
       li.title= book.title
       li.author by #{book.author}
       li.synopsis= book.synopsis
       li.published published #{book.publicationDate}
-  div
-    div.errors
-    form(action=`/books/${book.id}` method="post")
-      select.cryptSelector(name="cryptSelector")
-        option Add to Crypt...
-        each crypt in crypts
-          option(value=crypt.id class="crypt")= crypt.name
-      button(type="submit" id="crypt-submit") Submit
+  
 
   include footer.pug
