--- a/views/book.pug
+++ b/views/book.pug
@@ -3,26 +3,36 @@ extend layout.pug
 append head
   link(rel="stylesheet" href="/stylesheets/books.css")
   script(src="/javascripts/add-book.js")
+  script(src="/javascripts/add-review.js")
 
 
 block content
   div.book
-    div.container
-      img(src=`${book.coverArt}` width="80px" height="100px")
-      div.form
-        form(action=`/books/${book.id}` method="post")
-          select.cryptSelector(name="cryptSelector")
-            option Add to Crypt...
-            each crypt in crypts
-              option(value=crypt.id class="crypt")= crypt.name
-      div.button
-        button(type="submit" id="crypt-submit") Submit
-      div.errors
-      div.success
-    ul.list(id=`${book.id}`)
-      li.title= book.title
-      li by #{book.author}
-      li= book.synopsis
-      li published #{book.publicationDate}
+    div.books-container
+      div.container
+        img(src=`${book.coverArt}` width="80px" height="100px")
+        div.form
+          form(action=`/books/${book.id}` method="post")
+            select.cryptSelector(name="cryptSelector")
+              option Add to Crypt...
+              each crypt in crypts
+                option(value=crypt.id class="crypt")= crypt.name
+        div.button
+          button(type="submit" id="crypt-submit") Submit
+        div.errors
+        div.success
+      ul.list(id=`${book.id}`)
+        li.title= book.title
+        li by #{book.author}
+        div.synopsis= `- ${book.synopsis}`
+        li published #{book.publicationDate}
+    .review-container
+      div.textcontainer
+        for review in reviews
+          div.username= review.User.username
+          div.review= review.review
+          //- appending textarea and button
+    .add-new-review
+      button.add-review Add review
 
   include footer.pug
