--- a/views/book.pug
+++ b/views/book.pug
@@ -21,11 +21,11 @@ block content
           button(type="submit" id="crypt-submit") Submit
         div.errors
         div.success
-      ul.list(id=`${book.id}`)
+      ul.list(id=`${book.id}` style="list-style-type:none;")
         li.title= book.title
-        li by #{book.author}
-        div.synopsis= `- ${book.synopsis}`
-        li published #{book.publicationDate}
+        li.author by #{book.author}
+        li.synopsis= book.synopsis
+        li.published published #{book.publicationDate}
     .review-text Reviews
     .review-container
       div.textcontainer
