--- a/views/index.pug
+++ b/views/index.pug
@@ -37,5 +37,5 @@ block content
                   div.review= review.review
       div.reviewlink-container
         if user
-          a(href=`/users/${user.id}/reviews` class="reviewlink") Browse Reviews
+          a(href=`/reviews` class="reviewlink") Browse Reviews
   include footer
