--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -1,7 +1,9 @@
 .footer {
   min-height: 100px;
-  background-color: #941B0C;
-
+  background-color: #E0A42B;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .footer-links {
