--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,20 +1,18 @@
 .main-container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-content: center;
-    flex-wrap: wrap;
-    align-content: space-around;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: space-around;
+  align-items: center;
   }
 
   .welcome {
-   text-align: center;
-   margin-top: 15px;
-   font-size: 42px;
-   border-bottom: 3px solid #220901;
-   max-width: 600px;
-   margin-bottom: 30px;
+    text-align: center;
+    margin-top: 15px;
+    font-size: 4rem;
+    border-bottom: 3px solid #220901;
+    margin-bottom: 30px;
   }
 
 .books-title, .reviews-title {
@@ -35,18 +33,17 @@
   }
 
   .books-container {
-    max-width: 900px;
-    width: 900px;
+    width: 1200px;
     flex-direction: row;
     flex-grow: 1;
-    background-color: rgb(210, 180, 130);
     padding: 15px;
-    border-radius: 25px;
-    box-shadow: 0 0 20px 5px rgba(0,0,0,0.1)
+    border-radius: 5px;
+    box-shadow: 0 0 4px 4px rgba(0,0,0,0.05), 0 0 8px 8px rgba(0,0,0,0.1), 0 0 12px 12px rgba(0,0,0,0.08);
+    margin-top: 50px;
+    background-color: white;
   }
 
   .nested-books-container {
-    display: inline-block;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -66,11 +63,11 @@
   .reviews-container {
     margin-top: 50px;
     max-width: 500px;
-    background-color: rgb(210, 180, 130);
-    box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.1);
+    background-color: rgba(150, 148, 144, 0.6);
     padding: 15px;
-    border-radius: 25px;
+    border-radius: 5px;
     margin-bottom: 30px;
+    box-shadow: 0 0 4px 4px rgba(0,0,0,0.05), 0 0 8px 8px rgba(0,0,0,0.1), 0 0 12px 12px rgba(0,0,0,0.08);
   }
 
   .reviewlink-container {
@@ -83,8 +80,8 @@
     height: 200px;
     width: 400px;
     box-shadow: 0 0 20px 5px rgba(0,0,0,0.1);
-    background-color: rgb(223, 196, 151);
-    border-radius: 50px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
   }
 
   .username {
