--- a/public/stylesheets/universal.css
+++ b/public/stylesheets/universal.css
@@ -11,7 +11,7 @@ h1 {
 }
 
 body {
-    background-color: #F6AA1C;
+    background-color: #FFF093;
     font-family: 'Lato', sans-serif, 'Merriweather', serif;
 }
 
