--- a/public/stylesheets/books.css
+++ b/public/stylesheets/books.css
@@ -39,7 +39,7 @@
   margin-top: 50px;
   box-shadow: 0 0 20px 5px rgba(0,0,0,0.1);
   margin-bottom: 400px;
-  height: auto;
+  /* height: auto; */
   margin-right: 180px;
 }
 
