--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -1,9 +1,11 @@
 .footer {
   min-height: 100px;
   background-color: #E0A42B;
-  position: absolute;
-  bottom: 0;
+  margin-top: 10%;
+  position: relative;
+  bottom: 0px;
   width: 100%;
+  z-index: -10;
 }
 
 .footer-links {
