--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -16,7 +16,7 @@
     margin: auto;
     margin-top: 80px;
     border-radius: 5%;
-    margin-bottom: 320px;
+    margin-bottom: 80%;
 }
 
  .form-field {
