--- a/views/user-crypts.pug
+++ b/views/user-crypts.pug
@@ -12,3 +12,4 @@ block content
       a(href=`/users/${user.id}/crypts/${crypts[1].id}`)= crypts[1].name
     div.current
       a(href=`/users/${user.id}/crypts/${crypts[2].id}`)= crypts[2].name
+  include footer.pug
