--- a/public/stylesheets/books.css
+++ b/public/stylesheets/books.css
@@ -10,6 +10,8 @@
 }
 
 .books-container {
+  position: relative;
+  top: 0px;;
   flex-direction: row;
   flex-grow: 1;
   background-color: rgb(210, 180, 130);
@@ -30,17 +32,24 @@
   display: flex;
   flex-direction: column;
   margin-left: 250px;
-  height: 200px;
+  height: fit-content;
+  width: fit-content;
   justify-content: center;
   align-items: center;
-  background-color: rgb(210, 180, 130);
+  background-color:transparent;
   padding: 30px;
   border-radius: 25px;
   margin-top: 50px;
   box-shadow: 0 0 20px 5px rgba(0,0,0,0.1);
   margin-bottom: 400px;
-  /* height: auto; */
+  z-index: -40;
   margin-right: 180px;
+}
+
+.review-container {
+  position: relative;
+  top: 0px;
+  z-index: -10;
 }
 
 .review-text {
@@ -73,6 +82,7 @@
 
 .books-container {
   display: flex;
+  z-index: -10;
 }
 .books {
   display: inline-flex;
