--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -1,121 +1,112 @@
 @font-face {
-  font-family: "Gypsy Curse";
-  src: url('Gypsy-Curse.ttf')
+	font-family: "Gypsy Curse";
+	src: url("Gypsy-Curse.ttf");
 }
 
 .mainnav {
-  height: 150px;
-  background-color: rgb(240, 240, 240);
-  position: sticky;
-  top: 0px;
-  margin-bottom: 50px;
-  box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.1), 0px 0px 8px 6px rgba(0, 0, 0, 0.1);
+	height: auto;
+	background-color: rgb(240, 240, 240);
+	position: sticky;
+	display: flex;
+	flex-direction: column;
+	top: 0px;
+	margin-bottom: 50px;
+	box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.1),
+		0px 0px 8px 6px rgba(0, 0, 0, 0.1);
 }
 
 .navbar {
-  height: 110px;
-  display: flex;
-  justify-content: space-around;
-  margin: 0 auto;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.03);
+	height: auto;
+	display: flex;
+	width: 100%;
+	margin: 0 auto;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.03);
 }
 
 .navsearch {
-  width: auto;
-  align-self: center
+	width: auto;
+	align-self: center;
 }
 
 .buttons {
-justify-content: space-between;
-padding: 0 10px;
+	justify-content: space-between;
+	padding: 0 10px;
 }
 
 .deadreads-title {
-  font-family: Gypsy Curse;
-  font-size: 8ch;
-  margin-left: 20px;
-  text-decoration: none;
-
+	font-family: Gypsy Curse;
+	font-size: 8ch;
+	margin-left: 20px;
+	text-decoration: none;
 }
 
 .deadreads-title:hover {
-  transition: text-shadow 4s;
-  text-shadow:
-  1px 4px 1px #300000,
-  1px 6px 1px #400000,
-  1px 8px 1px #500000,
-  1px 10px 1px #600000,
-  2px 12px 1px #700000,
-  2px 14px 1px #800000,
-  2px 16px 1px #900000,
-  2px 18px 1px #A00000,
-  3px 20px 1px #B00000,
-  3px 22px 1px #C00000,
-  3px 24px 1px #D00000,
-  3px 26px 1px #E00000,
-  3px 28px 1px #F00000,
-  3px 30px 1px #FA0000,
-  3px 32px 1px #FB0000,
-  4px 34px 1px #FC0000,
-  4px 36px 1px #FD0000,
-  4px 38px 1px #FE0000,
-  4px 40px 2px #FF0000;
+	transition: text-shadow 4s;
+	text-shadow: 1px 4px 1px #300000, 1px 6px 1px #400000, 1px 8px 1px #500000,
+		1px 10px 1px #600000, 2px 12px 1px #700000, 2px 14px 1px #800000,
+		2px 16px 1px #900000, 2px 18px 1px #a00000, 3px 20px 1px #b00000,
+		3px 22px 1px #c00000, 3px 24px 1px #d00000, 3px 26px 1px #e00000,
+		3px 28px 1px #f00000, 3px 30px 1px #fa0000, 3px 32px 1px #fb0000,
+		4px 34px 1px #fc0000, 4px 36px 1px #fd0000, 4px 38px 1px #fe0000,
+		4px 40px 2px #ff0000;
 }
 
 ul.navlinks {
-  display: flex;
-  padding: 10px;
-  justify-content: center;
+	display: flex;
+	padding: 10px;
+	justify-content: center;
 }
 
 .pagetitle {
-  align-self: center;
+	align-self: flex-start;
 }
 
 .searchinput {
-  padding: 10px;
-  font-size: 0.9em;
-  min-width: 800px;
-  max-width: 800px;
-  height: 35px;
-  border: 0;
-  border-radius: 10px;
-  box-shadow: 0 0 20px 5px rgba(0,0,0,0.1);
-  background-color: rgb(255, 255, 255);
-  box-sizing: border-box;
+	padding: 10px;
+	font-size: 0.9em;
+	min-width: 800px;
+	max-width: 800px;
+	height: 35px;
+	border: 0;
+	border-radius: 10px;
+	box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.1);
+	background-color: rgb(255, 255, 255);
+	box-sizing: border-box;
 }
 
 .searchinput:focus {
-  outline-style: none;
-  background-color: rgb(214, 205, 197)
+	outline-style: none;
+	background-color: rgb(214, 205, 197);
 }
 
 .usericons {
-  display: flex;
-  padding: 0 10px;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	padding: 0 10px;
+	justify-content: center;
+	align-items: center;
 }
 
 .usericons div a {
-  width: 35px;
-  height: 35px;
-  text-decoration: none;
-  color: rgb(210, 180, 130);
+	width: 35px;
+	height: 35px;
+	text-decoration: none;
+	color: rgb(210, 180, 130);
 }
 
-.tags, .crypts, .userprofile {
-  font-family: Lato;
-  padding-top: 13px;
-  width: 45px;
-  height: 45px;
-  background-color: #220901;
-  margin: 0 10px;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  text-align: center;
-  transition: text-shadow 3s;
+.tags,
+.crypts,
+.userprofile {
+	font-family: Lato;
+	padding-top: 13px;
+	width: 45px;
+	height: 45px;
+	background-color: #220901;
+	margin: 0 10px;
+	align-items: center;
+	justify-content: center;
+	border-radius: 50%;
+	text-align: center;
+	transition: text-shadow 3s;
 }
 
 /* .crypts:hover, .userprofile:hover {
@@ -141,37 +132,44 @@ ul.navlinks {
 } */
 
 ul.navlinks li {
-  margin-left: 50px;
-  display: inline-flex;
-  width: 106px;
+	margin-left: 50px;
+	display: inline-flex;
+	width: 106px;
 }
 
 /* MIGHT NEED TO REVISIT */
-.navlinks li.center-circle, .navlinks li.center-circle>a {
-  display: inline-flex;
-  color: black;
-  text-decoration: none;
+.navlinks li.center-circle,
+.navlinks li.center-circle > a {
+	display: inline-flex;
+	color: black;
+	text-decoration: none;
 }
 
 .navlinks li a {
-  display: inline-flex;
-  color: black;
-  text-decoration: none;
-  transition: text-decoration 300ms ease-in;
+	display: inline-flex;
+	color: black;
+	text-decoration: none;
+	transition: text-decoration 300ms ease-in;
 }
 
 .navlinks li a:hover {
-  text-decoration: underline;
+	text-decoration: underline;
 }
 
 @keyframes color-background {
-    0%   {background-color: white;}
-    10%  {background-color: rgb(153, 106, 114);}
-    20%  {background-color: red;}
-    100% {background-color: red;}
-    }
-
-
+	0% {
+		background-color: white;
+	}
+	10% {
+		background-color: rgb(153, 106, 114);
+	}
+	20% {
+		background-color: red;
+	}
+	100% {
+		background-color: red;
+	}
+}
 
 /* .logout {
   display: inline-block;
