--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,8 +17,8 @@ html
           input(type='search' placeholder="Search books by Title or Author..." class='searchinput' name="searchfield" id="searchfield" pattern="^[a-zA-Z0-9_]+( [a-zA-Z0-9_]+)*$")
 
 
-      div
-        ul(class="navlinks")
+      div.navlinks-wrapper
+        ul.navlinks
           li: a(href='/') Home
           if user
             li: a(href=`/users/${user.id}/crypts`) My Crypts
