--- a/public/stylesheets/user-crypts.css
+++ b/public/stylesheets/user-crypts.css
@@ -1,55 +1,49 @@
 @font-face {
-  font-family: "Gypsy Curse";
-  src: url('Gypsy-Curse.ttf')
+	font-family: "Gypsy Curse";
+	src: url("Gypsy-Curse.ttf");
 }
 
 .crypts-container {
-  width: 100%;
-  height: 400px;
-  display: inline-flex;
-  justify-content: space-around;
-  align-items: center;
-  font-family: Lato;
-  font-size: xx-large;
+	width: 100%;
+	height: 400px;
+	display: inline-flex;
+	justify-content: space-around;
+	align-items: center;
+	font-family: Lato;
+	font-size: xx-large;
 }
 
-.have, .want, .current {
-  color: white;
-  background-color: #140501;
-  border-radius: 50px;
-  width: 200px;
-  height: 200px;
-  display: inline-flex;
-  justify-content: space-around;
-  align-items: center;
-  text-align: center;
+.have,
+.want,
+.current {
+	color: white;
+	background-color: #140501;
+	border-radius: 5px;
+	width: 200px;
+	height: 200px;
+	display: inline-flex;
+	justify-content: space-around;
+	align-items: center;
+	text-align: center;
 }
 
-.have:hover, .want:hover, .current:hover {
-  font-family: Gypsy Curse;
-  font-size: 40px;
-  border: 1px solid black;
-  border-radius: 20px;
-  color: silver;
-  animation-name: color-background;
-  animation-duration: 8s;
-  transition: text-shadow 3s;
-        
-  text-shadow: 
-    13px 30px 1px black,
-    14px 34px 1px #FC0000,
-    15px 36px 1px #FD0000,
-    16px 38px 1px #FE0000,
-    16px 40px 2px #FF0000, 
-    16px 42px 2px #FF0000, 
-    16px 44px 2px #FF0000, 
-    17px 46px 3px #FF0000; 
+.have:hover,
+.want:hover,
+.current:hover {
+	font-size: 40px;
 }
 
 @keyframes color-background {
-    0%   {background-color: white;}
-    10%  {background-color: rgb(153, 106, 114);}
-    20%  {background-color: red;}
-    100% {background-color: red;}
-    }
-
+	0% {
+		background-color: white;
+	}
+	10% {
+		background-color: rgb(153, 106, 114);
+	}
+	20% {
+		background-color: red;
+	}
+	100% {
+		background-color: red;
+	}
+}
