--- a/public/stylesheets/crypt-book.css
+++ b/public/stylesheets/crypt-book.css
@@ -1,58 +1,59 @@
 .main-book-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 400px;
-  margin-top: 50px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 400px;
+	margin-top: 50px;
 }
 
 .books-container {
-  max-width: 900px;
-  width: 900px;
-  flex-direction: row;
-  flex-grow: 1;
-  background-color: rgb(210, 180, 130);
-  padding: 15px;
-  border-radius: 25px;
-  box-shadow: 0 0 20px 5px rgba(0,0,0,0.1);
-  margin: 20px 10px;
+	max-width: 900px;
+	width: 900px;
+	flex-direction: row;
+	flex-grow: 1;
+	background-color: white;
+	padding: 15px;
+	border-radius: 25px;
+	box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.1);
+	margin: 20px 10px;
 }
 
 .nested-books-container {
-  display: inline-block;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+	display: inline-block;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .booklink-container {
-  margin-top: 20px;
-  text-align: center;
-  font-size: 18px;
+	margin-top: 20px;
+	text-align: center;
+	font-size: 18px;
 }
 
 .books {
-  box-shadow: 0 0 20px 5px rgba(0,0,0,0.4);
-  height: 240px;
-  margin: 10px;
+	box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.4);
+	height: 240px;
+	margin: 10px;
 }
 
-.books-title, .reviews-title {
-  font-size: 32px;
-  border-bottom: 1px solid black;
-  text-align: center;
+.books-title,
+.reviews-title {
+	font-size: 32px;
+	border-bottom: 1px solid black;
+	text-align: center;
 }
 
 .book-image {
-  max-width: 175px;
-  max-height: 240px;
-  object-fit: fill;
-  /* object-fit: cover; */
+	max-width: 175px;
+	max-height: 240px;
+	object-fit: fill;
+	/* object-fit: cover; */
 }
 
 .bookimglink {
-  height: 0;
-  width: 0;
+	height: 0;
+	width: 0;
 }
