changed color of crypt links

--- a/public/stylesheets/user-crypts.css
+++ b/public/stylesheets/user-crypts.css
@@ -17,7 +17,7 @@
 .want,
 .current {
 	color: white;
-	background-color: #140501;
+	background-color: #2a231df5;
 	border-radius: 5px;
 	width: 200px;
 	height: 200px;
