--- a/public/stylesheets/user-page.css
+++ b/public/stylesheets/user-page.css
@@ -1,161 +1,153 @@
-@font-face {
-  font-family: "Gypsy Curse";
-  src: url('Gypsy-Curse.ttf')
-}
-
 .banner {
-  color: black;
-  width: 100%;
-  height: 80px;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	color: black;
+	width: 100%;
+	height: 80px;
+	margin: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 h2.banner-text {
-  font-family: Lato;
-  font-size: xxx-large;
-  margin-top: 20px;
+	font-family: Lato;
+	font-size: xxx-large;
+	margin-top: 20px;
 }
 
 ul.user-info {
-  margin-top: 20px;
-  border-top: 1px solid white;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  width: 80%;
-  height: 1000px;
-  background-color: #140501;
-  color: white;
-  margin-left: 10%;
-  margin-right: 10%;
-  text-align: center;
+	margin-top: 20px;
+	border-top-left-radius: 25px;
+	border-top-right-radius: 25px;
+	width: 80%;
+	height: 1000px;
+	background-color: white;
+	color: black;
+	margin-left: 10%;
+	margin-right: 10%;
+	text-align: center;
 }
 
 li.username {
-  font-family: Gypsy Curse;
-  font-size: 100px;
+	font-size: 100px;
 }
 
 li.fullName {
-  font-family: Lato;
-  font-size: 3ch;
+	font-family: Lato;
+	font-size: 3ch;
 }
 
 li.gender {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 2ch;
-  margin-bottom: 20px;
- 
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 2ch;
+	margin-bottom: 20px;
 }
 
 p.labelBDay {
-  margin-left: 10%;
-  margin-right: 10%;
-  /* width: 80%; */
-  border-top: 1px solid white;
-  /* border-top-left-radius: 25px; */
-  /* border-top-right-radius: 25px; */
+	margin-left: 10%;
+	margin-right: 10%;
+	/* width: 80%; */
+	border-top: 1px solid black;
+	/* border-top-left-radius: 25px; */
+	/* border-top-right-radius: 25px; */
 }
 
 li.birthdate {
-  font-family: Gypsy Curse;
-  font-size: 5ch;
+	font-size: 5ch;
 }
 
 p.labelEmail {
-  border-top: 1px solid white;
-  margin-left: 10%;
-  margin-right: 10%;
+	border-top: 1px solid black;
+	margin-left: 10%;
+	margin-right: 10%;
 }
 
 li.email {
-  font-family: Lato;
-  font-size: 4ch;
-  margin-bottom: 20px;
+	font-family: Lato;
+	font-size: 4ch;
+	margin-bottom: 20px;
 }
 
 p.member {
-  border-top: 1px solid white;
-  margin-left: 10%;
-  margin-right: 10%;
+	border-top: 1px solid black;
+	margin-left: 10%;
+	margin-right: 10%;
 }
 
 li.createdAt {
-  font-family: Gypsy Curse;
-  font-size: 5ch;
-  margin-bottom: 50px;
+	font-size: 5ch;
+	margin-bottom: 50px;
 }
 
 .links-container {
-  border-top: 1px solid white;
-  margin-left: 10%;
-  margin-right: 10%;
-  width: 80%;
-  height: 200px;
-  display: inline-flex;
-  justify-content: space-around;
-  align-items: center;
-  font-family: Gypsy Curse;
-  font-size: 70px;;
+	border-top: 1px solid black;
+	margin-left: 10%;
+	margin-right: 10%;
+	width: 80%;
+	height: 200px;
+	display: inline-flex;
+	justify-content: space-around;
+	align-items: center;
+	font-family: Gypsy Curse;
+	font-size: 70px;
 }
 
 .moreBooks {
-  margin-top: 100px;
-  color: #621708;
-  background-color: #140501;
-  border-radius: 50%;
-  width: 175px;
-  height: 175px;
-  display: inline-flex;
-  justify-content: space-around;
-  align-items: center;
-  text-align: center;
-  background-color: #F6AA1C;
-  align-items: center;
+	margin-top: 100px;
+	color: #621708;
+	background-color: #140501;
+	border-radius: 50%;
+	width: 175px;
+	height: 175px;
+	display: inline-flex;
+	justify-content: space-around;
+	align-items: center;
+	text-align: center;
+	background-color: #f6aa1c;
+	align-items: center;
 }
 
 .reviews {
-  margin-top: 100px;
-  color: #621708;
-  background-color: #140501;
-  border-radius: 50%;
-  width: 175px;
-  height: 175px;
-  display: inline-flex;
-  justify-content: space-around;
-  align-items: center;
-  text-align: center;
-  background-color: #F6AA1C;
-  align-items: center;
+	margin-top: 100px;
+	color: #621708;
+	background-color: #140501;
+	border-radius: 50%;
+	width: 175px;
+	height: 175px;
+	display: inline-flex;
+	justify-content: space-around;
+	align-items: center;
+	text-align: center;
+	background-color: #f6aa1c;
+	align-items: center;
 }
 
-.moreBooks:hover, .reviews:hover {
-  font-family: Gypsy Curse;
-  font-size: 40px;
-  border: 1px solid black;
-  border-radius: 50%;
-  color: silver;
-  animation-name: color-background;
-  animation-duration: 8s;
-  transition: text-shadow 3s;
-        
-  text-shadow: 
-    13px 30px 1px black,
-    14px 34px 1px #FC0000,
-    15px 36px 1px #FD0000,
-    16px 38px 1px #FE0000,
-    16px 40px 2px #FF0000, 
-    16px 42px 2px #FF0000, 
-    16px 44px 2px #FF0000, 
-    17px 46px 3px #FF0000; 
+.moreBooks:hover,
+.reviews:hover {
+	font-family: Gypsy Curse;
+	font-size: 40px;
+	border: 1px solid black;
+	border-radius: 50%;
+	color: silver;
+	animation-name: color-background;
+	animation-duration: 8s;
+	transition: text-shadow 3s;
+
+	text-shadow: 13px 30px 1px black, 14px 34px 1px #fc0000, 15px 36px 1px #fd0000,
+		16px 38px 1px #fe0000, 16px 40px 2px #ff0000, 16px 42px 2px #ff0000,
+		16px 44px 2px #ff0000, 17px 46px 3px #ff0000;
 }
 
 @keyframes color-background {
-    0%   {background-color: white;}
-    10%  {background-color: rgb(153, 106, 114);}
-    20%  {background-color: red;}
-    100% {background-color: red;}
-    }
-
+	0% {
+		background-color: white;
+	}
+	10% {
+		background-color: rgb(153, 106, 114);
+	}
+	20% {
+		background-color: red;
+	}
+	100% {
+		background-color: red;
+	}
+}
