--- a/public/stylesheets/user-page.css
+++ b/public/stylesheets/user-page.css
@@ -33,6 +33,8 @@ ul.user-info {
 	margin-left: 10%;
 	margin-right: 10%;
 	text-align: center;
+	box-shadow: 0 0 4px 4px rgba(0, 0, 0, 0.05), 0 0 8px 8px rgba(0, 0, 0, 0.1),
+		0 0 12px 12px rgba(0, 0, 0, 0.08);
 }
 
 li.username {
