--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -130,12 +130,12 @@
 	margin-right: 10px;
 }
 
-button {
+/* button {
 	border-radius: 5px;
 	width: 116px;
 	height: 48px;
 	background: #220901;
-}
+} */
 
 .page-wrapper {
 	display: flex;
