--- a/views/footer.pug
+++ b/views/footer.pug
@@ -1,7 +1,21 @@
 footer.footer
-  div.footer-links ipso Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    //- a Link
-    //- a Link
-    //- a Link
+  .footer-links
 
+    button.michael 
+      a(href='https://www.linkedin.com/in/michael-gann-1a2161201/') 
+        img(src='https://img.flaticon.com/icons/png/512/174/174857.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF' width='40px' height='30') 
+      span Michael Gann
+      a(href='https://github.com/michael-gann') 
+        img(src='https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png' width='30px')
+    button.zac 
+      a(href='https://www.linkedin.com/in/zac-watts-b27450106/') 
+          img(src='https://img.flaticon.com/icons/png/512/174/174857.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF' width='40px' height='30')
+      span Zac Watts
+      a(href='https://github.com/zdwatts')
+        img(src='https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png' width='30px')
+    button.david 
+      a(href='https://www.linkedin.com/in/david-griffin-117b0045/') 
+          img(src='https://img.flaticon.com/icons/png/512/174/174857.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF' width='40px' height='30')
+      span David Griffin
+      a(href='https://github.com/davidleegriffin')
+        img(src='https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png' width='30px')
