--- a/views/books.pug
+++ b/views/books.pug
@@ -4,9 +4,9 @@ append head
   link(rel="stylesheet" href="/stylesheets/books.css")
 
 block content
-  div.main-contaier
+  div.main-container
+    h2.books-title Books
     div.books-container
-      p.books-title Books
       div.nested-books-container
         ul
           each book in books
