--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -3,8 +3,29 @@
     src: url('Gypsy-Curse.ttf')
   }
 
-.form {
+  .main-login-container {
     display: flex;
+    justify-content: center;
+    height: 100vh;
+}
+
+.form-container {
+    margin-top: 3%;
+    background-color: white;
+    height: 50%;
+    min-height: 300px;
+    max-height: 400px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.1),
+                0px 0px 4px 4px rgba(0, 0, 0, 0.1),
+                0px 0px 8px 8px rgba(0, 0, 0, 0.1),
+                0px 0px 12px 12px rgba(0, 0, 0, 0.1);
+}
+
+.form {
+    margin-top: 50px;
+    width: 300px;
+    /* display: flex;
     width: 400px;
     justify-items: flex-start;
     align-self: center;
@@ -16,15 +37,41 @@
     margin: auto;
     margin-top: 80px;
     border-radius: 5%;
-    margin-bottom: 80%;
+    margin-bottom: 80%; */
 }
 
  .form-field {
     display: flex;
+    flex-direction: column;
+    margin-top:30px;
+    justify-content: center;
+    /* display: flex;
     justify-items: flex-start;
     align-items: center;
     flex-direction: column;
-    padding: 8px;
+    padding: 8px; */
+}
+
+.form-field label {
+    align-self: flex-start;
+    margin-left: 30px;
+    font-size: 12px;
+    color: rgb(109, 107, 107);
+    margin-bottom: 4px;
+}
+
+.form-field input {
+    width: 80%;
+    align-self: center;
+    border-radius: 2px;
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    height: 30px;
+    font-size: 15px;
+}
+
+.form-field input:focus {
+    outline: none;
 }
 
 .errors {
@@ -32,8 +79,22 @@
     text-align: center;
 }
 
+.form-field button {
+    border: none;
+    color: white;
+    background-color: #BD7B1F;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    transition: background-color 300ms ease-in-out,
+               color 300ms ease-in;
+}
+
 .form-field__button {
-    font-family: Lato;
+    align-self:center;
+    width: 80%;
+    height: 30px;
+    border-radius: 15px;
+    font-size: 15px;
+    /* font-family: Lato;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -42,35 +103,18 @@
     height: 45px;
     color: white;
     background: #220901;
-    transition: text-shadow 3s;
+    transition: text-shadow 3s; */
 }
 
-.form-field__button:hover {
-    font-family: Gypsy Curse;
-    font-size: xx-large;
-    border: 1px solid black;
-    border-radius: 50px;
-    color: silver;
-    margin-left: 4px;
-    margin-top: 1px;
-    color: silver;
-    animation-name: color-background;
-    animation-duration: 8s;
-    transition: text-shadow 3s;
-    text-shadow:
-      13px 30px 1px black,
-      14px 34px 1px #FC0000,
-      15px 36px 1px #FD0000,
-      16px 38px 1px #FE0000,
-      16px 40px 2px #FF0000,
-      16px 42px 2px #FF0000,
-      16px 44px 2px #FF0000,
-      17px 46px 3px #FF0000;
+.form-field button:hover {
+    background-color: #F2C900;
+    cursor: pointer;
+    color: black;
 }
 
-@keyframes color-background {
-    0%   {background-color: white;}
-    10%  {background-color: rgb(153, 106, 114);}
-    20%  {background-color: red;}
-    100% {background-color: red;}
+.welcome-to {
+    font-size: 1.8rem;
+    text-align: center;
+    margin-top: 10%;
+    color: rgb(56, 52, 52);
 }
