--- a/public/stylesheets/user-page.css
+++ b/public/stylesheets/user-page.css
@@ -26,7 +26,7 @@ ul.user-info {
 	margin-top: 20px;
 	border-radius: 5px;
 	padding: 10px;
-	width: 500px;
+	width: 100%;
 	height: fit-content;
 	background-color: white;
 	color: black;
