--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -1,32 +1,34 @@
 .footer {
-  min-height: 100px;
-  background-color: #E0A42B;
-  margin-top: 10%;
-  position: relative;
-  bottom: 0px;
-  width: 100%;
-  z-index: -10;
+	min-height: 100px;
+	background-color: #e0a42b;
+	margin-top: 10%;
+	position: relative;
+	bottom: 0px;
+	width: 100%;
+	z-index: -10;
 }
 
 .footer-links {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  justify-content: space-around;
-  align-items: center;
-  align-content: center;
-  min-height: 90px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	justify-content: space-around;
+	align-items: center;
+	align-content: center;
+	min-height: 90px;
 }
 
-.michael, .zac, .david {
-  width: fit-content;
-  height: 50px;
-  back-ground-color: white;
-  color: black;
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-  box-shadow: 2px  2px 4px rgba(40, 40, 40, 0.5);
-  font-family: sans-serif;
-  font-size: 20px;
+.michael,
+.zac,
+.david {
+	width: fit-content;
+	height: 50px;
+	background-color: white;
+	color: black;
+	text-decoration: none;
+	display: flex;
+	align-items: center;
+	box-shadow: 2px 2px 4px rgba(40, 40, 40, 0.5);
+	font-family: sans-serif;
+	font-size: 20px;
 }
