--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -1,28 +1,41 @@
 body {
-  height: 100vmax;
-  padding: 50px;
-  font: 14px "Lato", Helvetica, Arial, sans-serif;
+	/* height: 100vmax; */
+	padding: 50px;
+	font: 14px "Lato", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+	color: #00b7ff;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6, a, ol, li, ul, div, span,
-body, header, nav {
-  /* font-size: 1rem; */
-  color: inherit;
-  background-color: transparent;
-  margin: 0;
-  padding: 0;
-  outline: 0;
-  font-weight: normal;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a,
+ol,
+li,
+ul,
+div,
+span,
+body,
+header,
+nav {
+	/* font-size: 1rem; */
+	color: inherit;
+	background-color: transparent;
+	margin: 0;
+	padding: 0;
+	outline: 0;
+	font-weight: normal;
 }
 
 h1 {
-  font-size: 2rem;
+	font-size: 2rem;
 }
